--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,7 @@ jar {
     }
     from {
         configurations.compileClasspath.findAll() {
-            it.name.endsWith(".jar") && it.name.contains("vosk") && it.name.contains("sources") && !it.name.contains("javadoc")  // 直接编译源码
+            it.name.endsWith(".jar") && it.name.contains("vosk") && !it.name.contains("sources") && !it.name.contains("javadoc")  // 直接编译源码
         }.collect {
             zipTree(it)
         }
