--- a/gradle.properties
+++ b/gradle.properties
@@ -3,20 +3,20 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.19.3
-	yarn_mappings=1.19.3+build.5
+	minecraft_version=1.19.4
+	yarn_mappings=1.19.4+build.1
 	loader_version=0.14.17
 
 # Mod Properties
-	mod_version = 1.1.1
+	mod_version = 1.1.2
 	maven_group = github.jaffe2718
 	archives_base_name = mcmti
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.73.2+1.19.3
-    midnightlib_version=1.1.0-fabric
-	modmenu_version = 5.0.2
+	fabric_version=0.75.3+1.19.4
+    midnightlib_version=1.2.1-fabric
+	modmenu_version = 6.1.0-rc.4
 
 # Third party Java libraries
     vosk_version = 0.3.45
