--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,22 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx1G -Dfile.encoding=UTF-8
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.1
-	loader_version=0.14.17
+	minecraft_version=1.20
+	yarn_mappings=1.20+build.1
+	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.1.4
+	mod_version = 1.1.5
 	maven_group = github.jaffe2718
 	archives_base_name = mcmti
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.75.3+1.19.4
-    midnightlib_version=1.2.1-fabric
-	modmenu_version = 6.1.0-rc.4
+	fabric_version=0.83.0+1.20
+    midnightlib_version=1.4.0
+	modmenu_version = 7.0.0
 
 # Third party Java libraries
     vosk_version = 0.3.45
