--- a/gradle.properties
+++ b/gradle.properties
@@ -3,20 +3,20 @@ org.gradle.jvmargs=-Xmx1G -Dfile.encoding=UTF-8
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.20
-	yarn_mappings=1.20+build.1
-	loader_version=0.14.21
+	minecraft_version=1.20.2
+	yarn_mappings=1.20.2+build.4
+	loader_version=0.14.22
 
 # Mod Properties
-	mod_version = 1.1.5
+	mod_version = 1.1.6
 	maven_group = github.jaffe2718
 	archives_base_name = mcmti
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.83.0+1.20
-    midnightlib_version=1.4.0
-	modmenu_version = 7.0.0
+	fabric_version=0.89.3+1.20.2
+    midnightlib_version=1.5.0-fabric
+	modmenu_version = 8.0.0
 
 # Third party Java libraries
     vosk_version = 0.3.45
